--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
     repositories {
-        google()
-        jcenter()
-        
+        maven {
+            url 'https://maven.aliyun.com/nexus/content/repositories/google'
+        }
+        maven {
+            url 'https://maven.aliyun.com/nexus/content/groups/public/'
+        }
+        maven {
+            url 'https://maven.aliyun.com/nexus/content/repositories/jcenter'
+        }
+        // google()
+        //  jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.0'
-        
+        classpath 'com.android.tools.build:gradle:3.5.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,9 +24,17 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
-        jcenter()
-        
+        maven {
+            url 'https://maven.aliyun.com/nexus/content/repositories/google'
+        }
+        maven {
+            url 'https://maven.aliyun.com/nexus/content/groups/public/'
+        }
+        maven {
+            url 'https://maven.aliyun.com/nexus/content/repositories/jcenter'
+        }
+        // google()
+        // jcenter()
     }
 }
 
